# python3-module-libcng-dpapi

./: README.md  pyproject.toml  setup.cfg
.gear/: python3-module-libcng-dpapi.spec  rules
src/: cng_dpapi_bindings.py  cng_dpapi_wrapper.py
src/libcng-dpapi/: __init__.py
src/libcng_dpapi/: cng_dpapi_wrapper.py
