[metadata]
name = libcng-dpapi
version = attr: libcng-dpapi.0.0.1
author = Vladimir Rubanov
author_email = august@altlinux.org
description = Bindings for libcng-dpapi
long_description = file: README.md
license = GPLv2
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Security :: Cryptography
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    importlib-metadata; python_version<"3.10"

[options.package_data]
* = *.md

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    tests*
